Badge vertical align fix #827

--- a/src/scss/ui/_badges.scss
+++ b/src/scss/ui/_badges.scss
@@ -13,7 +13,6 @@
   font-size: $h6-font-size;
   letter-spacing: .04em;
   text-transform: uppercase;
-  vertical-align: bottom;
 
   @at-root a#{&} {
     color: $white;
